# errornodebench

./: .env.example  .gitignore  LICENSE  README.md  modal_app.py  pyproject.toml  reproduce.sh  requirements.txt
errornodebench/: __init__.py  claude_cli.py  cli.py  concurrency.py  consolidator.py  judge.py  llm.py  models.py  runner.py  trajectory.py  vllm_backend.py
errornodebench/baselines/: __init__.py  expel.py  reflexion.py
errornodebench/scenarios/: interference.py
runs/: v1.json  v2.json  v3.json  v4.json  v5_haiku.json  v5_opus.json  v5_sonnet.json  v6_haiku_reversed.json  v7_llama8b.json  v7_qwen32b.json
scripts/: aggregate_results.py
tests/: test_smoke.py
